Closed
Bug 869692
Opened 12 years ago
Closed 12 years ago
[B2G][inari] OS crashes when making or receiving a call
Categories
(Firefox OS Graveyard :: Bluetooth, defect)
Tracking
(blocking-b2g:tef+, firefox21 wontfix, firefox22 wontfix, firefox23 unaffected, b2g18 unaffected, b2g18-v1.0.0 wontfix, b2g18-v1.0.1 verified)
VERIFIED
FIXED
| blocking-b2g | tef+ |
| Tracking | Status | |
|---|---|---|
| firefox21 | --- | wontfix |
| firefox22 | --- | wontfix |
| firefox23 | --- | unaffected |
| b2g18 | --- | unaffected |
| b2g18-v1.0.0 | --- | wontfix |
| b2g18-v1.0.1 | --- | verified |
People
(Reporter: nkot, Assigned: echou)
Details
(Keywords: crash, regression, smoketest, Whiteboard: [b2g-crash])
Crash Data
Attachments
(2 files)
|
143.27 KB,
text/plain
|
Details | |
|
962 bytes,
patch
|
gyeh
:
review+
|
Details | Diff | Splinter Review |
Description:
OS crash occurs when making a call or during active connected call, does not reproduce 100% but happens quite often
Crash ID:1367963316
Repro Steps:
1) Updated to Inari Build ID: 20130507070205
2) Open Dialer app
3) Make a call from device
Actual:
Device crashes when making a call
Expected:
Able to make a call successfully
Environmental Variables:
Gecko: http://hg.mozilla.org/releases/mozilla-b2g18_v1_0_1/rev/7e9e10889942
Gaia: 29f5faf992aa2bacf6a9d500494093edd9472c69
Version 18.0
COM_RIL
Notes:
Repro frequency: 2/2 devices, 50%
See attached logcat for more info
Comment 1•12 years ago
|
||
I can reproduce this using the same build, Ikura/Commercial RIL/, but when receiving a call. I can repro it 1/2 times;
Gecko http://hg.mozilla.org/releases/mozilla-b2g18_v1_0_1/rev/7e9e10889942
Gaia 29f5faf992aa2bacf6a9d500494093edd9472c69
BuildID 20130507070205
Version 18.0
Here is my crash report: https://crash-stats.mozilla.com/report/index/1a76f6c7-f3f0-4706-ab86-93a9e2130507. I have another one queued up but it is in pending.
blocking-b2g: --- → tef?
Component: General → Gaia::Dialer
Summary: [B2G][inari] OS crashes when making a call → [B2G][inari] OS crashes when making or receiving a call
Comment 2•12 years ago
|
||
Crashes using the Mozilla RIL as well:
Gecko http://hg.mozilla.org/releases/mozilla-b2g18_v1_0_1/rev/7e9e10889942
Gaia 29f5faf992aa2bacf6a9d500494093edd9472c69
BuildID 20130507070205
Version 18.0
https://crash-stats.mozilla.com/report/index/bd0d5cd4-14fd-4c5e-adea-1b6a52130508
Severity: normal → blocker
Crash Signature: [@ mozilla::dom::bluetooth::BluetoothHfpManager::HandleCallStateChanged ]
Updated•12 years ago
|
Keywords: regression,
regressionwindow-wanted
Updated•12 years ago
|
Component: Gaia::Dialer → Bluetooth
Comment 3•12 years ago
|
||
Gina - Any ideas? Do you have an idea what bug might have caused the regression here?
Flags: needinfo?(gyeh)
Comment 4•12 years ago
|
||
I'll take a look at this and update information later. Thanks for reporting.
Assignee: nobody → gyeh
Flags: needinfo?(gyeh)
| Assignee | ||
Updated•12 years ago
|
Assignee: gyeh → echou
Updated•12 years ago
|
Whiteboard: [b2g-crash]
| Assignee | ||
Comment 5•12 years ago
|
||
I made a v1.0.1-specific patch for bug 860166, however I forgot to replace original conditional check at the beginning of HandleCallStateChanged() with IsConnected(). That's the root cause of the crash.
Attachment #746800 -
Flags: review?(gyeh)
| Assignee | ||
Comment 6•12 years ago
|
||
Forgot to mention that the crash is caused by using a null mSocket, and IsConnected() would check if mSocket has value.
This bug is v1.0.1 only.
Comment 7•12 years ago
|
||
Comment on attachment 746800 [details] [diff] [review]
patch 1: Using IsConnected() at the beginning of HandleCallStateChanged()
Review of attachment 746800 [details] [diff] [review]:
-----------------------------------------------------------------
Nice catch!
Attachment #746800 -
Flags: review?(gyeh) → review+
| Assignee | ||
Updated•12 years ago
|
Keywords: checkin-needed
| Assignee | ||
Comment 8•12 years ago
|
||
Hi sheriff,
Please note that this is a v1.0.1-only bug. Thank you.
Updated•12 years ago
|
blocking-b2g: tef? → tef+
Updated•12 years ago
|
status-b2g18:
--- → unaffected
status-b2g18-v1.0.0:
--- → wontfix
status-b2g18-v1.0.1:
--- → affected
Comment 10•12 years ago
|
||
Now it's got tef+. Thanks Andreas. Can we land this?
Keywords: regressionwindow-wanted → checkin-needed
Comment 11•12 years ago
|
||
Issue repro on Inari v1.0.1 Comm
Build ID: 20130508070205
Kernel Date: Feb 21
Gecko: http://hg.mozilla.org/releases/mozilla-b2g18_v1_0_1/rev/c3a5041bfe5a
Gaia: 89a9c5de7313dfd1095d0ff46988bc91a35cbe9c
and Inari v1.0.1 Mozilla
Build ID: 20130508070205
Gecko: c3a5041bfe5a
Gaia: 89a9c5de7313dfd1095d0ff46988bc91a35cbe9c
When receiving call device crashes and reboots immediately without ringing.
When Calling from a device device crashes, reboots but stays on active call without loosing it.
Comment 12•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
status-firefox21:
--- → wontfix
status-firefox22:
--- → wontfix
status-firefox23:
--- → unaffected
Keywords: checkin-needed
Resolution: --- → FIXED
Comment 13•12 years ago
|
||
Verified fixed on Inari 1.0.1 commercial RIL. User is able to make calls without the OS crashing.
Build ID: 20130508104236
Gecko: http://hg.mozilla.org/releases/mozilla-b2g18_v1_0_1/rev/af99cb91eec0
Gaia: 89a9c5de7313dfd1095d0ff46988bc91a35cbe9c
Status: RESOLVED → VERIFIED
Updated•12 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•