Bug 869692 - Add a missing IsConnected() condition check at the beginning of HandleCallStateChanged(). r=gyeh, a=tef+